--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
             document.getElementById('screen' + screenNum).classList.add('active');
         }
     </script>
-    <a href="council.html">View the Council Page</a>
+    <a href="council2.html">View the Council Page</a>
 </body>
 </html>
 
