Add link to NNC.html in Agency2.html

--- a/Agency2.html
+++ b/Agency2.html
@@ -1507,5 +1507,7 @@
             document.querySelector(`#${screenId} .screen-content`).scrollTo(0, 0);
         }
     </script>
+    <a href="NNC.html">View the NNC</a>
+   </html>
 </body>
 </html>
