--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,7 @@
         }
     </script>
     <a href="council2.html">View the Council Page</a>
+     <a href="nnc.html">View the NNC Page</a>
 </body>
 </html>
 
